[package]
name = "rust_os"
version = "0.2.0"
authors = ["Kevin Moonen <dragonrider7225@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bootloader = "0.9.3"
lazy_static = { version = "1.0", features = ["spin_no_std"] }
volatile = "0.2.6"
spin = "0.5.2"
