[package]
name = "rust_os"
version = "0.3.0"
authors = ["Kevin Moonen <dragonrider7225@gmail.com>"]
edition = "2018"

[package.metadata.bootimage]
test-args = [
    "-device", "isa-debug-exit,iobase=0xf4,iosize=0x04",
    "-serial", "stdio",
    "-display", "none",
]
test-success-exit-code = 5
# Time to allow a test to run before terminating it.
test-timeout = 30

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bootloader = "0.9.4"
lazy_static = { version = "1.4.0", features = ["spin_no_std"] }
volatile = "0.2.6"
spin = "0.5.2"
uart_16550 = "0.2.0"
x86_64 = "0.11.0"
